# todoer

./: .gitignore  LICENSE  README.md  meson.build
data/: com.github.devhammed.todoer.gresource.xml
data/ui/: todoer.glade
src/: todoer.vala
